--- a/README
+++ b/README
@@ -2,7 +2,6 @@
 | cordon-poison |
 -----------------
 
-2002-2022
 
 # psychiater
 https://nl.wikipedia.org/wiki/Psychiater
@@ -19,4 +18,4 @@ https://en.wikipedia.org/wiki/Biological_warfare
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
 
-doctor robin at work
+doctor robin at work ® 2002-2022
